--- a/package.json
+++ b/package.json
@@ -48,58 +48,58 @@
     "watch:src": "tsc -w"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/react-fontawesome": "^0.1.8",
-    "@jupyterlab/application": "^3.1.13",
-    "@jupyterlab/apputils": "^3.1.13",
-    "@jupyterlab/cells": "^3.1.13",
-    "@jupyterlab/notebook": "^3.1.13",
-    "@terraformer/wkt": "^2.0.7",
+    "@fortawesome/fontawesome-svg-core": "6.2.0",
+    "@fortawesome/free-solid-svg-icons": "6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@jupyterlab/application": "3.4.7",
+    "@jupyterlab/apputils": "3.4.7",
+    "@jupyterlab/cells": "3.4.7",
+    "@jupyterlab/notebook": "3.4.7",
+    "@terraformer/wkt": "^2.1.2",
     "isomorphic-fetch": "^3.0.0",
-    "leaflet": "^1.7.1",
+    "leaflet": "1.8.0",
     "leaflet-draw": "^1.0.4",
-    "lodash": "^4.17.15",
+    "lodash": "4.17.21",
     "react": "^17.0.2",
-    "react-datepicker": "^4.2.1",
+    "react-datepicker": "4.8.0",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.16.2",
-    "react-leaflet": "~2.8.0",
+    "react-hook-form": "7.36.1",
+    "react-leaflet": "2.8.0",
     "react-leaflet-draw": "0.19.0",
-    "react-modal": "^3.14.3",
-    "react-select": "^4.3.1",
+    "react-modal": "3.15.1",
+    "react-select": "5.4.0",
     "react-tooltip": "~4.2.21",
     "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^3.1.14",
+    "@jupyterlab/builder": "3.4.7",
     "@types/classnames": "^2.3.1",
-    "@types/isomorphic-fetch": "^0.0.35",
-    "@types/leaflet": "^1.7.5",
+    "@types/isomorphic-fetch": "^0.0.36",
+    "@types/leaflet": "1.8.0",
     "@types/leaflet-draw": "^1.0.5",
-    "@types/lodash": "^4.14.175",
-    "@types/luxon": "^1.26.5",
-    "@types/react": "^17.0.26",
-    "@types/react-datepicker": "^4.1.7",
-    "@types/react-dom": "^17.0.9",
+    "@types/lodash": "^4.14.185",
+    "@types/luxon": "^3.0.1",
+    "@types/react": "^17.0.50",
+    "@types/react-datepicker": "4.4.2",
+    "@types/react-dom": "^17.0.17",
     "@types/react-leaflet": "^2.8.2",
-    "@types/react-modal": "^3.12.1",
-    "@types/react-select": "^4.0.18",
-    "@types/react-virtualized": "^9.21.13",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "mkdirp": "^1.0.3",
+    "@types/react-modal": "3.13.1",
+    "@types/react-select": "4.0.18",
+    "@types/react-virtualized": "^9.21.21",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "eslint": "^8.23.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.4.1",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "typescript": "4.2.4"
+    "typescript": "4.3.5"
   },
   "resolutions": {
-    "**/@types/react": "~17.0.26",
-    "**/@types/react-dom": "~17.0.9"
+    "**/@types/react": "~17.0.50",
+    "**/@types/react-dom": "~17.0.17"
   },
   "jupyterlab": {
     "extension": true,
